@@ -3,8 +3,12 @@
 
 TEST(test_collision_trimesh_sphere)
 {
-    dInitODE();
+    /*
+     * This tests some extreme cases, where a sphere barely touches some triangles
+     * with zero depth.
+     */
 
+    dInitODE();
     {
         const int VertexCount = 4;
         const int IndexCount = 2*3;
@@ -61,4 +65,38 @@ TEST(test_collision_trimesh_sphere)
         CHECK_EQUAL(1, nc);
         CHECK_EQUAL(0, cg[0].depth);
     }
+    dCloseODE();
 }
+
+
+
+TEST(test_collision_heightfield_ray_fail)
+{
+    /*
+     * This test demonstrated a bug in the AABB handling of the
+     * heightfield.
+     */
+    dInitODE();
+    {
+        // Create quick heightfield with dummy data
+        dHeightfieldDataID heightfieldData = dGeomHeightfieldDataCreate();
+        unsigned char dataBuffer[16+1] = "1234567890123456";
+        dGeomHeightfieldDataBuildByte(heightfieldData, dataBuffer, 0, 4, 4, 4, 4, 1, 0, 0, 0);
+        dGeomHeightfieldDataSetBounds(heightfieldData, '0', '9');
+	    dGeomID height = dCreateHeightfield(0, heightfieldData, 1);
+
+        // Create ray outside bounds
+        dGeomID ray = dCreateRay(0, 20);
+        dGeomRaySet(ray, 5, 10, 1, 0, -1, 0);
+        dContact contactBuf[10];
+
+        // Crash!
+        dCollide(ray, height, 10, &(contactBuf[0].geom), sizeof(dContact));
+
+        dGeomDestroy(height);
+        dGeomDestroy(ray);
+        dGeomHeightfieldDataDestroy(heightfieldData);
+    }
+    dCloseODE();
+}
+
